# DrocoProject

./: .gitignore  .gitmodules  3D_SLAM_README.md  README.md  README_TCP_DRACO_BRIDGE.md  SYSTEM_FLOWCHART.md  quick_test.sh  run_3d_slam.sh  run_auto_test.sh  run_bridge_with_bag.sh  run_full_test.sh  run_integrated_bridge.sh  run_kiss_icp.sh  run_lidar_draco_bridge.sh  run_rviz_only.sh  run_with_rviz.sh  simple_tf_broadcaster.py
config/: draco_bridge_visualization.rviz  kiss_icp_fast.yaml  kiss_slam_visualization.rviz  simple_draco_visualization.rviz
launch/: kiss_icp_slam.launch.py
scripts/: auto_kiss_icp.sh  check_frame_id.sh  kiss_icp_slam.py  kiss_slam_ros2_node.py  offline_slam.sh  run_draco_client.sh  run_improved_bridge.sh  run_improved_client.sh  run_infinite_test.sh  run_lidar_test.sh  run_package_bridge.sh  run_package_client.sh  run_tcp_test.sh  simple_icp_odometry.py  test_draco_transmission.sh
src/draco_bridge_cpp/: CMakeLists.txt  package.xml
src/draco_bridge_cpp/src/: draco_bridge_client.cpp  draco_bridge_server.cpp  simple_draco_bridge.cpp  simple_draco_client.cpp
src/draco_web_monitor/draco_web_monitor/: web_monitor_node.py  web_server.py
src/draco_web_monitor/draco_web_monitor/templates/: index.html
src/gazebo_lidar_simulation/: CMakeLists.txt  README.md  package.xml
src/gazebo_lidar_simulation/config/: integrated_simulation.rviz  lidar_config.yaml
src/gazebo_lidar_simulation/launch/: gazebo_lidar.launch.py  ignition_lidar.launch.py  integrated_simulation.launch.py  velodyne_lidar.launch.py
src/gazebo_lidar_simulation/models/lidar_robot/: lidar_robot.sdf
src/gazebo_lidar_simulation/models/velodyne_robot/: velodyne_robot.urdf.xacro
src/gazebo_lidar_simulation/scripts/: lidar_publisher.py  lidar_subscriber.py  simulation_bridge.py  tcp_lidar_bridge.py
src/gazebo_lidar_simulation/worlds/: ignition_lidar_world.sdf  lidar_test_world.world  simple_lidar_world.sdf  velodyne_world.world
src/lidar_draco_bridge/: CMakeLists.txt  package.xml
src/lidar_draco_bridge/config/: lidar_draco_config.yaml
src/lidar_draco_bridge/launch/: draco_client.launch.py  kiss_icp_slam.launch.py  lidar_draco_bridge.launch.py
src/lidar_draco_bridge/lidar_draco_bridge/: __init__.py  bridge.py  client.py
src/lidar_draco_bridge/scripts/: draco_client.py  draco_client_improved.py  lidar_draco_bridge.py  lidar_draco_bridge_improved.py
src/point_cloud_transport_py/: CMakeLists.txt  package.xml
src/point_cloud_transport_py/examples/: point_cloud_codec_example.py  point_cloud_publisher.py  point_cloud_subscriber.py
src/point_cloud_transport_py/python/point_cloud_transport_py/: __init__.py  codec.py  compression.py  point_cloud_transport.py  publisher.py  subscriber.py
src/point_cloud_transport_py/test/: test_point_cloud_transport.py
src/tcp_point_cloud_transport_cpp/: CMakeLists.txt  package.xml  tcp_plugins.xml
src/tcp_point_cloud_transport_cpp/include/tcp_point_cloud_transport_cpp/: draco_compression.hpp  tcp_point_cloud_message.hpp  tcp_publisher_plugin.hpp
src/tcp_point_cloud_transport_cpp/src/: draco_compression.cpp  tcp_point_cloud_message.cpp  tcp_publisher_plugin.cpp
src/tcp_point_cloud_transport_py/: CMakeLists.txt  README.md  package.xml
src/tcp_point_cloud_transport_py/examples/: tcp_publisher_example.py  tcp_subscriber_example.py
src/tcp_point_cloud_transport_py/python/tcp_point_cloud_transport_py/: __init__.py  tcp_transport.py
src/tf_mover/: CMakeLists.txt  package.xml
src/tf_mover/src/: tf_mover.cpp
