<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_lidar_simulation</name>
  <version>1.0.0</version>
  <description>
    Gazebo simulation package for 3D LiDAR with TCP Point Cloud Transport integration.
    Provides complete simulation environment for testing point cloud transmission.
  </description>
  <maintainer email="developer@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/ros-perception/point_cloud_transport</url>
  <url type="bugtracker">https://github.com/ros-perception/point_cloud_transport/issues</url>
  <url type="repository">https://github.com/ros-perception/point_cloud_transport</url>

  <author>Developer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>point_cloud_transport_py</depend>
  <depend>tcp_point_cloud_transport_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
