<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_draco_bridge</name>
  <version>1.0.0</version>
  <description>ROS2 package for bridging LiDAR simulation data to Draco compression system</description>
  
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  
  <url type="website">https://github.com/user/lidar_draco_bridge</url>
  <url type="bugtracker">https://github.com/user/lidar_draco_bridge/issues</url>
  <url type="repository">https://github.com/user/lidar_draco_bridge</url>
  
  <author email="user@example.com">User</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>point_cloud_transport_py</depend>
  <depend>std_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
