<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>point_cloud_transport_py</name>

  <version>5.3.0</version>

  <description>Pure Python API for point_cloud_transport with compression support</description>

  <author>Alejandro Hernandez Cordero</author>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernández</maintainer>
  <maintainer email="john.dangelo@tailos.com">John D'Angelo</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/ros-perception/point_cloud_transport</url>
  <url type="bugtracker">https://github.com/ros-perception/point_cloud_transport/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>